outlets/templates/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    cert-manager.io/issuer: outlets-issuer
    cert-manager.io/common-name: my-outlets-group30.com
spec:
  tls:
  - hosts:
    - my-webapp-group30.com
    secretName: my-ingress-cert
  rules:
    - host: my-webapp-group30.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outlets-service
                port: 
                  number: 8080
